--- a/index.html
+++ b/index.html
@@ -9,15 +9,44 @@
 <body>
   <header>
     <div class="logo">severe<span>.</span></div>
-    <nav>
-      <a href="#" class="nav-link active" data-page="home">Home</a>
-      <a href="#" class="nav-link" data-page="buy">How to Buy</a>
-      <a href="#" class="nav-link" data-page="docs">Docs</a>
-    </nav>
     <button class="color-btn" id="colorBtn"></button>
     <a href="#" class="download-btn">Download</a>
   </header>
-  <main id="main-content"></main>
+  <section class="hero">
+    <h1 class="fade-in">The First & Best External Executor After Byfron.</h1>
+    <div class="code-window pop-in">
+      <div class="code-bar">
+        <span></span><span></span><span></span>
+      </div>
+      <pre>
+<span class="purple">local</span> severe = <span class="blue">require</span>(<span class="green">'Severe'</span>)
+<span class="purple">if</span> severe:Ready() <span class="purple">then</span>
+    severe:Inject()
+<span class="purple">end</span>
+      </pre>
+    </div>
+  </section>
+  <section class="faq-section slide-up">
+    <div class="faq-title">Frequently Asked Questions</div>
+    <div class="faq">
+      <div class="faq-item">
+        <div class="faq-question">What's the official discord/telegram?<span>+</span></div>
+        <div class="faq-answer">Join our Discord: discord.gg/severe</div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-question">How much does it cost?<span>+</span></div>
+        <div class="faq-answer">Severe is 100% free.</div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-question">Why is this free?<span>+</span></div>
+        <div class="faq-answer">We believe in open access for all users.</div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-question">How do I contact the developer?<span>+</span></div>
+        <div class="faq-answer">DM us on Discord or email support@severe.gg</div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="footer-logo">severe<span>.</span></div>
     <a href="#" class="download-btn">Download</a>
