--- a/index.html
+++ b/index.html
@@ -2,53 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Severe External - Roblox Executor</title>
+  <title>PalmExec - Roblox External</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <div class="logo">severe<span>.</span></div>
+    <div class="logo-container">
+      <div class="logo-svg">
+        <svg width="38" height="38" viewBox="0 0 38 38">
+          <defs>
+            <linearGradient id="sunset" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="#ffb347"/>
+              <stop offset="50%" stop-color="#ff5e62"/>
+              <stop offset="100%" stop-color="#7b4397"/>
+            </linearGradient>
+          </defs>
+          <rect x="0" y="0" width="38" height="38" rx="10" fill="url(#sunset)"/>
+          <path d="M19 30 Q18 22 13 18 Q17 19 19 15 Q21 19 25 18 Q20 22 19 30Z" fill="#fff" stroke="#fff" stroke-width="1.5"/>
+          <rect x="17.5" y="15" width="3" height="13" rx="1.5" fill="#fff"/>
+        </svg>
+        <span class="notif-badge">1</span>
+      </div>
+      <span class="brand">PalmExec</span>
+    </div>
+    <nav>
+      <a href="#" class="nav-link active" data-page="home">Home</a>
+      <a href="#" class="nav-link" data-page="buy">How to Buy</a>
+      <a href="#" class="nav-link" data-page="docs">Docs</a>
+    </nav>
     <button class="color-btn" id="colorBtn"></button>
     <a href="#" class="download-btn">Download</a>
   </header>
-  <section class="hero">
-    <h1 class="fade-in">The First & Best External Executor After Byfron.</h1>
-    <div class="code-window pop-in">
-      <div class="code-bar">
-        <span></span><span></span><span></span>
-      </div>
-      <pre>
-<span class="purple">local</span> severe = <span class="blue">require</span>(<span class="green">'Severe'</span>)
-<span class="purple">if</span> severe:Ready() <span class="purple">then</span>
-    severe:Inject()
-<span class="purple">end</span>
-      </pre>
-    </div>
-  </section>
-  <section class="faq-section slide-up">
-    <div class="faq-title">Frequently Asked Questions</div>
-    <div class="faq">
-      <div class="faq-item">
-        <div class="faq-question">What's the official discord/telegram?<span>+</span></div>
-        <div class="faq-answer">Join our Discord: discord.gg/severe</div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-question">How much does it cost?<span>+</span></div>
-        <div class="faq-answer">Severe is 100% free.</div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-question">Why is this free?<span>+</span></div>
-        <div class="faq-answer">We believe in open access for all users.</div>
-      </div>
-      <div class="faq-item">
-        <div class="faq-question">How do I contact the developer?<span>+</span></div>
-        <div class="faq-answer">DM us on Discord or email support@severe.gg</div>
-      </div>
-    </div>
-  </section>
+  <main id="main-content"></main>
   <footer>
-    <div class="footer-logo">severe<span>.</span></div>
+    <div class="footer-logo">
+      <div class="logo-svg small">
+        <svg width="28" height="28" viewBox="0 0 38 38">
+          <defs>
+            <linearGradient id="sunset2" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="#ffb347"/>
+              <stop offset="50%" stop-color="#ff5e62"/>
+              <stop offset="100%" stop-color="#7b4397"/>
+            </linearGradient>
+          </defs>
+          <rect x="0" y="0" width="38" height="38" rx="10" fill="url(#sunset2)"/>
+          <path d="M19 30 Q18 22 13 18 Q17 19 19 15 Q21 19 25 18 Q20 22 19 30Z" fill="#fff" stroke="#fff" stroke-width="1.5"/>
+          <rect x="17.5" y="15" width="3" height="13" rx="1.5" fill="#fff"/>
+        </svg>
+      </div>
+      <span class="brand">PalmExec</span>
+    </div>
     <a href="#" class="download-btn">Download</a>
   </footer>
   <script src="script.js"></script>
