--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Severe External - Roblox Executor</title>
+  <title>Severe - Roblox Executor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -22,7 +22,7 @@
         </svg>
         <span class="notif-badge">1</span>
       </div>
-      <span class="brand">Severe External</span>
+      <span class="brand">Severe</span>
     </div>
     <nav>
       <a href="#" class="nav-link active" data-page="home">Home</a>
@@ -47,7 +47,7 @@
           <path d="M11 25 Q13 32 19 32 Q25 32 27 25 Q28 21 19 19 Q10 17 11 13 Q13 6 19 6 Q25 6 27 13" fill="none" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
         </svg>
       </div>
-      <span class="brand">Severe External</span>
+      <span class="brand">Severe</span>
     </div>
     <a href="#" class="download-btn">Download</a>
   </footer>
