--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
   <header>
     <div class="logo-container">
       <div class="logo-svg">
+        <!-- Palm tree SVG logo with sunset gradient background -->
         <svg width="38" height="38" viewBox="0 0 38 38">
           <defs>
-            <linearGradient id="severeGradient" x1="0" y1="0" x2="1" y2="1">
-              <stop offset="0%" stop-color="#a259ff"/>
-              <stop offset="100%" stop-color="#232526"/>
+            <linearGradient id="sunset" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="#ffb347"/>
+              <stop offset="50%" stop-color="#ff5e62"/>
+              <stop offset="100%" stop-color="#7b4397"/>
             </linearGradient>
           </defs>
-          <rect x="0" y="0" width="38" height="38" rx="10" fill="url(#severeGradient)"/>
-          <path d="M11 25 Q13 32 19 32 Q25 32 27 25 Q28 21 19 19 Q10 17 11 13 Q13 6 19 6 Q25 6 27 13" fill="none" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+          <rect x="0" y="0" width="38" height="38" rx="10" fill="url(#sunset)"/>
+          <path d="M19 30 Q18 22 13 18 Q17 19 19 15 Q21 19 25 18 Q20 22 19 30Z" fill="#fff" stroke="#fff" stroke-width="1.5"/>
+          <rect x="17.5" y="15" width="3" height="13" rx="1.5" fill="#fff"/>
         </svg>
         <span class="notif-badge">1</span>
       </div>
@@ -38,13 +41,15 @@
       <div class="logo-svg small">
         <svg width="28" height="28" viewBox="0 0 38 38">
           <defs>
-            <linearGradient id="severeGradient2" x1="0" y1="0" x2="1" y2="1">
-              <stop offset="0%" stop-color="#a259ff"/>
-              <stop offset="100%" stop-color="#232526"/>
+            <linearGradient id="sunset2" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="#ffb347"/>
+              <stop offset="50%" stop-color="#ff5e62"/>
+              <stop offset="100%" stop-color="#7b4397"/>
             </linearGradient>
           </defs>
-          <rect x="0" y="0" width="38" height="38" rx="10" fill="url(#severeGradient2)"/>
-          <path d="M11 25 Q13 32 19 32 Q25 32 27 25 Q28 21 19 19 Q10 17 11 13 Q13 6 19 6 Q25 6 27 13" fill="none" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+          <rect x="0" y="0" width="38" height="38" rx="10" fill="url(#sunset2)"/>
+          <path d="M19 30 Q18 22 13 18 Q17 19 19 15 Q21 19 25 18 Q20 22 19 30Z" fill="#fff" stroke="#fff" stroke-width="1.5"/>
+          <rect x="17.5" y="15" width="3" height="13" rx="1.5" fill="#fff"/>
         </svg>
       </div>
       <span class="brand">Severe</span>
